# discovering_coffee_law

./: .gitignore  BULLETPROOF_EXPERIMENTS.md  COFFEE_LAW_CLARIFICATION.md  HANDLING_HIGH_ACCURACY.md  IMPLEMENTATION_SUMMARY.md  PAPER_CONDENSATION_PLAN.md  PAPER_INTEGRATION.md  QUICKSTART_BULLETPROOF.md  README.md  THEORY_PREDICTIONS.md  analyze_dynamics.py  create_bulletproof_diagrams.py  create_paper_plots.py  cross_model_test.py  generate_all_paper_figures.py  generate_missing_figures.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_bulletproof_experiments.py  run_experiments.py  run_extraneous_experiments.py  theory_comparison.py
bulletproof_results_20260117_172001/: SUMMARY_REPORT.txt
bulletproof_results_20260117_172001/entropy_drift/: results.json
bulletproof_results_20260117_172001/stress_test/: results.json
examples/: custom_experiment.py  run_validation.py
extraneous_results_20260117_235450/: SUMMARY_REPORT.txt
extraneous_results_20260117_235622/: SUMMARY_REPORT.md
extraneous_results_20260117_235622/dense_sampling/: results.json
extraneous_results_20260117_235622/lost_in_middle/: results.json
extraneous_results_20260118_003721/: SUMMARY_REPORT.txt
extraneous_results_20260118_003721/dense_sampling/: results.json
extraneous_results_20260118_003721/lost_in_middle/: results.json
paper/: coffee_law.aux  coffee_law.out  coffee_law.tex  coffee_law_BACKUP.tex  copyformat.sty
paper_experiments/run_20260117_052558/: analysis_report.py  generate_figures.py  (+1 more)
query_drift/: __init__.py  __main__.py  cli.py  config.py  validator.py
(+30 files in other folders)
